--- a/MyFitnessPal.ipynb
+++ b/MyFitnessPal.ipynb
@@ -234,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_int(string):\n",
     "    curr = \"\"\n",
     "    for dig in string:\n",
-    "        if dig.isdigit():\n",
+    "        if dig.isdigit() or dig == '-':\n",
     "            curr += dig\n",
     "    return int(curr)"
    ]
@@ -644,6 +644,26 @@
    ],
    "source": [
     "len(missmatched)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2170"
+      ]
+     },
+     "execution_count": 250,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_total_nutrition(data, missmatched[123], 'Calories')"
    ]
   },
   {
