--- a/Dates_Clustering.ipynb
+++ b/Dates_Clustering.ipynb
@@ -1306,9 +1306,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oemnadze",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "oemnadze"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1320,7 +1320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
