--- a/People_Clustering.ipynb
+++ b/People_Clustering.ipynb
@@ -637,7 +637,7 @@
     "        continue\n",
     "    df = data.loc[:, [column]]\n",
     "    for i in df.index:\n",
-    "        if df.iloc[i, 0] > dic[column]:\n",
+    "        if df.iloc[i, 0] >= dic[column]:\n",
     "            data.loc[i, [column]] = data[column].median()"
    ]
   },
