--- a/MyFitnessPal.ipynb
+++ b/MyFitnessPal.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import dataset as pandas.DataFrame\n",
     "data = pd.read_csv('a.tsv', sep='\\t', header=0, names=['Person', 'Date', 'Input', 'Result'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# პირველ რიგში, ვნახოთ რა ტიპის მონაცემები გვაქვს და თითოეული რას წარმოადგენს.\n",
+    "# Person - არის კონკრეტული ადამიანის აღმნიშვნელი რიცხვი. ბაზა არის დასორტილი სწორედ ამის მიხედვით\n",
+    "# Date - კონკრეტული person-ის გვერდზე Date მიუთითებს, რომ person_num მომხმარებელმა date დღეს შეიყვანა ის მონაცემები რომელიც        მის მარჯვნივ იქნება.\n",
+    "# Input - გვაძლევს კონკრეტულ დღეს, კონკრეტული მომხმარებელის შეყვანილ ინფორმაციას. უფრო კონკრეტულად - მასში არის შენახული           მასივი, რომელიც შეიცავს დიქშენერებს. თავისი მხრივ, თითოეული დიქშენერი შეიცავს სამ key-ს. \n",
+    "#         1. ერთი არის meal რომელიც  აღნიშნავს უბრალოდ meal-ის დასახელებას. \n",
+    "#         2. მერე არის dishes, რომლის value-ც არის მასივი ორი დიქშენერით. \n",
+    "#             - პირველი დიქშენერის key არის nutritons და გვაძლევს იმ ნუტრიოტების დასახელებებს და რაოდენობებს, რომლებიც                   მომხმრებელმა შეიყვანა. 6-ზე მეტი ნუტრიოტი არსად არ გვხვდება. მინიმალური რაოდენობა კი არის 1. \n",
+    "#             - მეორე დიქშენერის key კი ყოველთვის არის name და value არის სტრინგი, რომელიც აღნიშნავს იმ კერძის სახელს,                   რომელის ნუტრიოტებიც მოცემული გვაქვს.\n",
+    "#         3. sequence - ის გვეუბნება თუ მერამდენე meal-ს მიმოვიხილავთ ახლა. აღსანიშნავია, რომ ყველგან sequence ს                      მნიშვნელობები ზრდადობითაა მასივის ინდექსის შესაბამისად.\n",
+    "# Result - გვაძლევს დიქშენერის რომელსაც აქვს ორი key:\n",
+    "#           total : გვაძლევს იმ ნუტრიოტების ჯამურ რაოდენობას (თითოეულისთვის ცალ-ცალკე), რომელიც მომხმარებელმა ამ კონკრეტულ           დღეს მიიღო\n",
+    "#           goal :  თითოეული ნუტრიოტის რაოდენობა, რაც აპლიკაციამ დაუსახა მომხმარებელს მისაღებად"
    ]
   },
   {
@@ -149,10 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#გადაყვება Input ველში მომხმარებლის შეყვანილ ნუტრიოტებს და ადგენს თუ რა არის მათი ჯამი\n",
+    "\n",
     "def get_real_total(data, row):\n",
     "    value = get_value(data, row, 2, True)\n",
     "    default = default_nutrition()\n",
@@ -167,10 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# გვიბრუნებს კონკრეტულ რიგში მოხმარებლის შეყვანილი საჭმლების სახელების სეტს.\n",
+    "\n",
     "def get_foods(data, row):\n",
     "    value = get_value(data, row, 2, True)\n",
     "    foods = set()\n",
@@ -183,10 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# გვიბრუნებს კონკრეტული მოხმარებლის შეყვანილ ყველა საჭმელს. (აბრუნებს სეტს, ანუ ყველა საჭმელი უნიკალურია)\n",
+    "\n",
     "def get_persons_unique_foods(data, person):\n",
     "    indexes = data.loc[data.Person == person, ['Input']].index\n",
     "    foods = set()\n",
@@ -197,10 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# კონრკეტულ რიგში შეყვანილი meal-ების სეტი\n",
+    "\n",
     "def get_meals(data, row):\n",
     "    meals = set()\n",
     "    value = get_value(data, row, 2, True)\n",
@@ -211,10 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# კონკრეტულ რიგში შეყვანილი meal-ების რაოდენობა\n",
+    "\n",
     "def get_meals_num(data, row):\n",
     "    meals = 0\n",
     "    value = get_value(data, row, 2, True)\n",
@@ -225,10 +255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# კონკრეტულ დღეს შეყვანილი უნიკალური meal-ების რაოდენობა\n",
+    "\n",
     "def get_daily_meals_num(data, date):\n",
     "    answ = set()\n",
     "    mask = data.Date == date\n",
@@ -240,10 +272,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ადგენს კონკრეტულ რიგში result-ის total-სა და უშუალოდ input-ში აჯამულ ნუტრიოტებს შორის თუ არის სხვაობა\n",
+    "\n",
     "def is_missmatched(data, row):\n",
     "    default = get_real_total(data, row)\n",
     "    total = get_value(data, row, 3, True)['total']\n",
@@ -258,10 +292,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ადგენს კონკრეტულ რიგში, Input ში რომელიმე ნუტრიოტის მნიშვნელობა არის თუ არა უარყოფითი\n",
+    "\n",
     "def is_negative(data, row):\n",
     "    value = get_value(data, row, 2, True)\n",
     "    for j in range(len(value)):\n",
@@ -428,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
