--- a/Clusterings.ipynb
+++ b/Clusterings.ipynb
@@ -18,6 +18,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "მომხმარებლების კლასტერიზაცია\n",
+    "-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "მომხმარებლებისთვის შექმნილი data-ს ფიჩერებზე უკვე საკმაოდ ვისაუბრეთ. ჩამოვტვირთოთ ეს მონაცემები და დავაკვირდეთ როგორ არიან განაწილებული."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -616,7 +631,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -631,6 +648,13 @@
    ],
    "source": [
     "boxplots(data.iloc[:, :-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "boxplot-ებიდან ბევრი რამის დანახვა შეგვიძლია. ისინი აჩვენებენ რა შუალედშია მოთავსებული მონაცემების 25, 50, 75% და ასევე შეგვიძლია დავინახოთ მონაცემების დაახლოებით 95%-ის შესაბამისი შუალედი, ხოლო ის წერტილები, რომლებიც გარეთაა მოქცეული, შეგვიძლია აუთლაიერებად ჩავთვალოთ. ამ ფიჩერების მიხედვით გაკეთებულ ბოქსპლოტებში ბევრგან ჩანს ამოვარდნა, მაგრამ ჩვენ გადავწყვიტეთ, რომ პირდაპირ ყველა ასეთი აუთლაიერის ჩანაცვლება არასწორი იქნება, რადგან შეიძლება მათი წილი 10%ც იყოს, რაც მონაცემების საკმაოდ დიდი რაოდენობაა, ამიტომ ჩავანაცვლოთ მხოლოდ ისეთი მონაცემები, რომლებიც \"ანომალიურად\" გვეჩვენება, ანუ აუთლაიერებშიც კი ცალკე არის გამოყოფილი. ეს ლოგიკურიც არის ძირითადად, რადგან მაგალითად avg_proportions_diff ის შემთხვევაში ვხედავთ, რომ 0-1000 შუალედშია მოთავსებული მონაცემების ძალიან დიდი ნაწილი და ამასთან ერთად გვაქვს 200000 ზე დიდი მონაცემებიც, რომლებიც აუცილებლად ამოსაგდებია. ასეთი შესაცვლელი ფიჩერებისთვის ის მნიშვნელობები, რომლებსაც ამოვარდნილად ვთვლით, ჩავანაცვლოთ მედიანით, რადგან ამ მონაცემების დიდ ნაწილში საშუალო მნიშვნელობა რეალობისგან საკმაოდ გადახრილი იქნება. ბოქსპლოტებს თუ დავაკვირდებით, ბევრგან არის, რომ მონაცემების დიდი ნაწილი რაღაც პატარა შუალედშია, და აუთლაიერები დიდი რიცხვებია საკმაოდ, ამიტომ გადავწყვიტეთ მედიანის გამოყენება ჩასანაცვლებლად."
    ]
   },
   {
@@ -989,6 +1013,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ახლა დავასკალიროთ მონაცემები და შემდეგ დავიწყოთ კლასტერიზაციის პროცესი."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -1246,6 +1277,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "სანამ მონაცემებს დავაკლასტერებთ, გამოვიყენოთ ჰოპკინსის სტატისტიკა იმისთვის, რომ დავადგინოთ რამდენად კარგად კლასტერირებადია მონაცემები."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -1302,6 +1340,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "როგორც ვხედავთ, ჰოპკინსის სტატისტიკა საკმაოდ კარგ შედეგს გვაძლევს. ახლა გავარკვიოთ მონაცემების რამდენ კლასტერად დაყოფა არის უპრიანი და ამისთვის გამოვიყენოთ elbow მეთოდი."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1335,6 +1380,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Elbow მეთოდის მიხედვით, მონაცემები 5 კლასტერად უნდა დაიყოს. ახლა ვცადოთ კლასტერირება. მონაცემებში არ გვაქვს კატეგორიული ცვლადები ან გამოტოვებული მნიშვნელობები, ამიტომ შეგვიძლია კლასტერირება და თან KMeans-ის გამოყენება."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -1346,6 +1398,13 @@
     "clusters = [[] for _ in range(5)]\n",
     "for indx, cluster in enumerate(y):\n",
     "    clusters[cluster].append(indx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ვიზუალიზაციისთვის გამოვიყენოთ PCA ალგორითმი."
    ]
   },
   {
@@ -1396,6 +1455,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pca-მ არც ისე ცუდი სურათი მოგვცა, მიუხედავად იმისა, რომ ფიჩერების რაოდენობა საკმაოდ ბევრი იყო და pca-ით 3 და 2 განზომილებაში დაყვანისას დიდი შანსია, რომ საკმაოდ ბევრი მონაცემი დაიკარგებოდა."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -1409,7 +1475,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1426,6 +1494,13 @@
    "source": [
     "for i in range(len(clusters)):\n",
     "    print(\"cluster \", i, len(clusters[i]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "აქ ვნახეთ, რომ მომხმარებლების რაოდენობა საკმაოდ არათანაბრადაა კლასტერებში განაწილებული. სავარაუდოა, რომ მომხმარებლები აქტიურობის მიხედვით არიან დაყოფილი კლასტერებად და ამან გამოიწვია ის, რომ მაგალითად გვაქვს 4919 მომხმარებლიანი კლასტერი, რომელიც სავარაუდოდ შეიცავს იმ მომხმარებლებს, რომლებიც არ არიან აპლიკაციის აქტიური მომხმარებლები, ანუ ეგრეთწოდებული \"დამწყებები\". ახლა ვნახოთ როგორ არიან მომხმარებლები კლასტერებში განაწილებული თითო ფიჩერის მიხედვით და ამისთვის გამოვიყენოთ stripplot ები, შემდეგ კი გამოვიტანოთ დასკვნები კლასტერების შესახებ."
    ]
   },
   {
@@ -1721,6 +1796,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "როგორც ვხედავთ, unique_foods-ის მიხედვით ყველაზე დაბალმაჩვენებლიანი იუზერები მე-3 კლასტერში არიან, შემდეგ კი 1-ში, ხოლო დანარჩენი 3 კლასტერი ერთმანეთს გვანან ამ მაჩვენებლით. ასევე input_number-შიც ყველაზე ნაკლები მონაცემები აქვთ 3 კლასტერში, შედარებით ოდნავ მეტი 1-ში, ხოლო დანარჩენ სამ კლასტერს ერთნაირი მაჩვენებლები აქვთ დაახლოებით. აქედან შეგვიძლია ზუსტად იმ დასკვნის გამოტანა, რომ მე-3 კლასტერის მომხმარებლები არიან ისინი, ვისაც ცოტაჯერ აქვს მონაცემები აპლიკაციაში შეყვანილი და შესაბამისად პასიური მომხმარებელია, პირველ კლასტერში მყოფებს შეიძლება დავარქვათ \"საშუალო აქტიურობის\" მომხმარებლები, ხოლო დანარჩენი კლასტერის იუზერები უკვე სტაბილური მომხმარებლები არიან აპლიკაციის. avg_daily_food-დან ბევრის თქმა არ შეგვიძლია, უბრალოდ იმის დანახვაა შესაძლებელი, რომ რახან მე-3 და 1 კლასტერებში ბევრი იუზერია რაოდენობრივად, მათი ვარიაციაც შედარებით დიდია, რადგან დღიურად შეყვანილი საჭმლის რაოდენობა ნაკლებადაა დამოკიდებული იუზერების აქტიურობაზე. რაც შეეხება პროპორციებს, აქ შეგვიძლია იმის დანახვა, რომ 1 და 3 კლასტერის იუზერებში უფრო დიდი მაჩვენებლებია აცდენის კალორიების ფორმულიდან (calories = 4 * proteins + 4 * carbs + 9 * fat), ვიდრე დანარჩენების. აქედან ჩნდება იმის ვარაუდი, რომ რახან პირველი და მესამე კლასტერის მომხმარებლები შედარებით ნაკლებად გამოცდილი არიან აპლიკაციის გამოყენებაში, არაადეკვატურად შეყავთ ნუტრიოტების რაოდენობა და ამით შეიძლება კიდევ გამყარდეს ვარაუდი იუზერების აქტიურობის მიხედვით განაწილების შესახებ.\n",
+    "რაც შეეხება დანარჩენ ფიჩერებს, რომლებიც არიან თითო ნუტრიოტის მიხედვით აცდენები (დადებით, უარყოფითი და არარსებული, ანუ ისეთი იუზერები, რომლებმაც საერთოდ არ შეიყვანეს კონკრეტული ნუტრიოტი), მათი მიხედვით უკვე შეგვიძლია დავადგინოთ განსხვავებები 3 \"აქტიურ იუზერების\" კლასტერებს შორის, კერძოდ, მათი ძირითადი გამნასხვავებელი ნიშანი არის სხვადასხვა ნუტრიოტების გამოუყენებლობა, ანუ ისინი იმით განსხავვდებიან ერთმაენთისგან რომ 7 ძირითადი ნუტრიოტიდან რომელიღაცის შესახებ ინფორმაცია ძალიან იშვიათად შეყავთ აპლიკაციაში. უფრო ზუსტად რომ ვთქვათ, ასეთი ნითიერებები გვაქვს 3: sugar, sodium და fiber. Sodium-ში none_difference აქვს მე-4 კლასტერს იუზერების ძალიან დიდი ნაწილისთვის, ანუ მათ არ შეყავთ ინფორმაცია ამ ნივთიერების შესახებ. ანალოგიური რამ შეგვიძლია ვთქვათ მე-2 კლასტერზე, რომელშიც მართალია რამდენიმე იუზერს აქვს ეს ინფორმაცია შეყვანილი, თუმცა ეს მცირე უზუსტობაა, ძირითადად აქაც none_difference კატეგორიაში არიან იუზერები განაწილებული. ანალოგიური სიტუაციაა 0 ნომრის კლასტერში Fiber ცვლადზე, რომელიც ისედაც ამ ნუტრიოტებს შორის ყველაზე ნაკლებად გამოყენებადი იყო და 0 კლასტერის იუზერებს თითქმის საერთოდ არ აქვთ მასზე ინფორმაცია შეყვანილი. მართალია, fiber-ის არ შეყვანა სხვა კლასტერებშიც ტენდენციაა, თუმცა 0 კლასტერი ყველაზე გამორჩეულია ამით, რასაც none_difference ში მისი ყველაზე დიდი მაჩვენებელი ადასტურებს.\n",
+    "კიდევ ერთი რამ, რისი თქმაც შეიძლება, არის ის, რომ ყველა ნივთიერებისთვის ყველა კლასტერში დადებითი აცდენები უფრო მეტად არის ხოლმე, ვიდრე უარყოფითი აცდენები, რამაც შეიძლება გვაფიქრებინოს, რომ უფრო მეტად მომხმარებლები მომატებას ცდილობენ ამ აპლიკაციით, ვიდრე დაკლებას, მაგრამ ეს სავარაუდოდ არასწორი დასკვნაა, რადგან ძირითადად ასეთი ტიპის აპლიკაციებს რეალურ ცხოვრებაში დაკლების სურვილის მქონე ადამიანები იყენებენ ხოლმე. აქ ჩვენ დასკალირებული მონაცემები გვაქვს და ასეთი დასკვნის გამოტანა პირდაპირ არასწორი იქნება ამიტომ, რადგან შესაძლოა უარყოფითი განსხვავებები რიცხვობრივად უფრო დიდებია, ვიდრე დადებითი. ამის შემოწმება რთული ნადმვილად არ არის და თუ ბოქს პლოტებს კიდევ ერთხელ ჩავხედავთ, მივხვდებით, რომ მართლაც ასე ხდება."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -1823,9 +1907,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "აქ არის უკვე რეპორტინგ ცვლადებად აღებული მონაცემების საშუალო და აქედან კიდევ ერთხელ შეგვიძლია ჩვენი გამოტანილი რამდენიმე დასკვნა გავამყაროთ, კერძოდ აქ ჩანს, რომ კლასტერებისთვის იმ ნუტრიოტების საშუალო, რომლებსაც არ იღებდნენ, 0-თან ძალიან ახლოსაა, ხოლო ზოგადი განაწილება თითქმის ერთნაირია ყველა ნუტრიოტის ყველა კლასტერში, რაც ზოგადი ტენდენციაა და ამის მიხედვით დიფერენცირებული არ არიან მიღებული კლასტერები."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1852,6 +1945,28 @@
     "    horizontalalignment='right'\n",
     ")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "კორელაციის მატრიციდან განსაკუთრებული რამის დანახვა არაა შესაძლებელი. ძირითადად ერთნაირი ნუტრიოტების ცვლადებს შორის არის ხოლმე დიდი კორელაციები, რაც ლოგიკურია."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "დღეების კლასტერიზაცია\n",
+    "-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "დღეებისთვის შექმნილი data-ს ფიჩერებზეც უკვე ვისაუბრეთ, ამიტომ გადავიდეთ შემდეგ ნაწილებზე."
    ]
   },
   {
@@ -2367,7 +2482,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2382,6 +2499,13 @@
    ],
    "source": [
     "boxplots_daysta(numerical_daysta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "აუთლაიერების ამოღების საჭიროება ამ შემთხვევაშიც იყო, ამიტომ როგორც წინა კლასტერიზაციაში, ზუსტად იგივე რამ გავაკეთეთ აქაც."
    ]
   },
   {
@@ -2445,6 +2569,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ჰოპკინსიც მისაღებ შედეგს იძლევა."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -2475,6 +2606,13 @@
     "visualizer = KElbowVisualizer(model, k=10)\n",
     "visualizer.fit(numerical_daysta)\n",
     "visualizer.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "აქაც აღმოჩნდა, რომ 5 კლასტერი არის მიზანშეწონილი, ამიტომ გავაკეთოთ იგივე ტიპის ალგორითმით კლასტერიზება."
    ]
   },
   {
@@ -2525,6 +2663,13 @@
     "pca = PCA(n_components=2)\n",
     "pca_components = pd.DataFrame(pca.fit_transform(numerical_daysta))\n",
     "plot(np.asarray(pca_components), clusters_daysta, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ვიზუალურად აქაც შეგვიძლია ვთქვათ, რომ მისაღები შედეგია, კიდევ ერთხელ pca-ის მუშაობის პრინციპიდან გამომდინარე."
    ]
   },
   {
@@ -2777,15 +2922,6 @@
     "plt.xlabel('Day')\n",
     "plt.legend()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#გამოცდილი და გამოუცდელი იუზერების რაოდენობები გამოვიყენოთ რეპორტინგ ცვლადად"
    ]
   },
   {
