--- a/Clusterings.ipynb
+++ b/Clusterings.ipynb
@@ -2702,7 +2702,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2880,6 +2882,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ამ კლასტერიზაციიდან არის რაღაცეების დანახვა შესაძლებელი. ყველაზე შესამჩნევი ფაქტი არის ის, რომ დღიურად უნიკალური იუზერების და შეყვანილი საჭმლის რაოდენობის მიხედვით კლასტერები ძალიან გვანან ერთმანეთს და თითქმის ზუსტად ერთნაირი თანაფარდობა აქვთ. ეს დიდად ინფორმატიული ფაქტი არ არის, უბრალოდ საინტერესო დამთხვევაა, რომ დაახლოებით 2-ჯერ მეტი არის ხოლმე თითო კლასტერში უნიკალური meal-ების რაოდენობა იუზერებთან შედარებით. ნუტრიოტების სხვაობები goal-სა და total-ს შორის და მათი საშუალო ჯამები არ გვაძლევს ასევე დიდ ინფორმაციას, რადგან მათი განაწილება დაახლოებით ყველა კლასტერში ერთნაირია, რაც მიუთითებს ზოგად ტენდენციაზე და არა ამ ნიშნით განსხვავებაზე. ყველაზე საინტერესო, რაც ამ კლასტერებიდან მივიღეთ, ჩანს მათი ყოველდღიური traffic-ის გრაფიკზე ასახვით, ვნახოთ ეს შედეგი.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -2925,6 +2934,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "როგორც ვხედავთ, ერთმანეთისგან ყველაზე მეტად გამოყოფილი ეს დღეები გამოვიდა სწორედ traffic-ის მიხედვით. ლურჯ კლასტერზე შეგვიძლია ვთქვათ, რომ კიდეებში მოთავსებული დღეები არის აღნიშნული, თუმცა ამ დღეებზე ბევრს ვერაფერს ვიტყვით, რადგან არ ვიცით მართლა ასეთი დაბალი აქტივობაა ამ დღეებში თუ სხვა რამ ხდება. დანარჩენ კლასტერებზე კი შეგვიძლია ბევრი რამე ვთქვათ. თუ გრაფიკს დავაკვირდებით, შევამჩნევთ, რომ გვაქვს რაღაც განმეორებითი ფორმები, იგივე სეზონები. ეს თითო 'კბილი' არის 7 დღიანი პერიოდი, რომელზეც შეგვიძლია შევამჩნიოთ, რომ მაღალი აქტივობის დღეები არის ძირითადად ვიქენდი და მათთან ახლოს დღეები, რადგან ამ დროს ხალხს უფრო სცალია, რომ იზრუნოს სხეულის ფორმებზე თუ კვების რაციონზე. ასევე არის 1 ჩავარდნის დღეც, რომელიც, თუ გამოვთვლით, ვნახავთ, რომ შობას ემთხვევა და ეს არც არის გასაკვირი. შემდეგ კი არის მკვეთრი ზრდა რისი მიზეზის ამოხსნაც ჩვენ არ შეგვიძლია, თუმცა აშკარად გარდამტეხი პერიოდია აქტივობის მხრივ აპლიკაციისთვის. ყვითელ კლასეტრზე ცალსახად შეგვიძლია ვთქვათ, რომ გარდამტეხ პერიოდამდე მაღალი აქტიოვბის დღეებს მოიცავს, თუმცა რამდენიმე დღე გრაფიკის ბოლოშიც არის ამ კლასტერის ნაწილი. იგივე ტიპის დღეებს მოიწავს მწვანე კლასტერი, თუმცა ეს არის უკვე გრაფიკის 'მეორე ნაწილში'. წითელი და იასამნისფერი კლასტერები შესაბამისად არიან ცვლილებამდე და ცვლილების შემდეგ პასიური დღეები."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -2954,6 +2970,13 @@
     "    horizontalalignment='right'\n",
     ")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "კორელაციის მატრიციდან unique_users და unique_meals შორის მაღალი კორელაციის დანახვა შეიძლება, თუმცა ეს როგორც ვთქვით დიდი ინფორმაციის მომცემი ფაქტი არ არის. კალორიებზეც შეგვიძლია დავინახოთ, რომ მისი დამოკიდებულება იმ 3 ნუტრიოტის მიმართ საკმაოდ დიდია, რომლებიც ფორმულად გამოვიყენეთ კალორიების დაახლოებითი რაოდენობის შესაფასებლად (calories = 4 * proteins + 4 * carbs + 9 * fat). კიდევ ერთი საინტერესო ფაქტი არის ის, რომ unique_users-ს (და შესაბამისად unique_meals-ს) აქვთ უარყოფითი დამოკიდებულება ყველა ნუტრიოტის dif და sum ის მიმართ, რაც სავარაუდოდ გამოწვეულია იმით, რომ რაც უფრო მეტი იუზერი მოიხმარს დღის განმავლობაში აპლიკაციას, მით უფრო მეტად შემცირდება საშუალო მნიშვნელობა, რადგან ყოველი ახალი იუზერის დამატება სავარაუდოდ დაბალი მნიშნელობის sum ან dif-ის დამატებას გამოიწვევს აქამდე შეყვანილ მნიშვნელობებთან შედარებით, რაც თავისთავად საშუალო მნიშვნელობას დაწევს."
    ]
   },
   {
@@ -3511,7 +3534,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3529,11 +3554,18 @@
     "plt.figure(figsize=(17, 8))\n",
     "plt.plot([i for i in range(1, 209)], passive_users_traffic, color='blue', label='passive')\n",
     "plt.plot([i for i in range(1, 209)], active_users_traffic, color='red', label='active')\n",
-    "plt.plot([i for i in range(1, 209)], average_users_traffic, color='green', label='average')\n",
+    "plბt.plot([i for i in range(1, 209)], average_users_traffic, color='green', label='average')\n",
     "plt.ylabel('Num Users')\n",
     "plt.xlabel('Day')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ამ გრაფიკზე ნაჩვენებია იუზერების დაყოფის მიხედვით დღეების აქტივობები. როგორც ვხედავთ, პასიური იუზერების აქტივობის გრაფიკი ყველაზე დაბლა მოხვდა, მიუხედავად იმისა, რომ მათი ჯამური რაოდენობა ყველა იუზერის დაახლოებით ნახევარია. შემდეგ არის საშუალო იუზერების აქტივობის გრაფიკი. მათი რაოდენობა დაახლოებით ყველა იუზერის მეოთხედია, ასევე არის აქტიური იუზერების ჯამური რაოდენობაც და როგორც ვხედავთ მათი გრაფიკი ყველაზე ზემოთაა, ანუ ეს ნიშნავს, რომ ჩვენი ეს დასვკნა მართებული არის და იუზერების კლასტერები მართლაც ამ ნიშნით არის გამოყოფილი ერთმანეთისგან. თუ ამ გრაფიკებს 'ავჯამავთ', მივიღებთ მთლიანი traffic ის გრაფიკს."
    ]
   },
   {
@@ -4358,7 +4390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
