--- a/Experiment.ipynb
+++ b/Experiment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ჩვენი ქე როა იგი\n",
+    "მომხმარებლის შედეგიანობის წინასწარმეტყველება\n",
     "-"
    ]
   },
@@ -24,6 +24,13 @@
     "from yellowbrick.cluster import KElbowVisualizer, SilhouetteVisualizer\n",
     "from itertools import product\n",
     "from tqdm import tqdm_notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ამ ამოცანაში ვეცდებით გამოვიცნოთ თუ რამდენად \"შედეგიანი\" იქნება კონკრეტული ადამიანისთვის შემდეგი დღეები. მოდი განვმარტოთ რას ნიშნავს \"შედეგიანი\". მიღებული ნუტრიოტებისა და აპლიკაციის დასახული ნუტრიოტების რაოდენობის საშუალებით პროგრამა ყოველდღე თვლის ქულას, რომელიც დავიმსახურეთ ამ დღეს. ანუ მაგალითად მე თუ დღეს ყველა ნუტრიოტთან მქონდა შედარებით დიდი აცდენა, ვიდრე გუშინ, დღეს აპლიკაცია ნაკლებ ქულას დამიწერს. ამით მომხმარებელს ექნება მეტი მოტივაცია სწორად მიყვეს დასახულ მიზანს და ასევე დაეხმარება მას იმაში, გახდეს სტაბილური და არ გამოტოვოს დღეები (დღის გამოტოვების შემთხვევაში ცხადია მას ქულა დააკლდება). "
    ]
   },
   {
@@ -53,6 +60,13 @@
     "    \n",
     "def get_size(data, person):\n",
     "    return data.loc[data.Person == person, ['Person']].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ცხადია, ყველა იუზერისთვის არ შეგვეძლება დასახული ამოცანის ამოხსნა მათზე ინფორმაციის უქონლობის გამო. ამიტომ, გადავწყვიტეთ ავირჩიოთ ისეთი ადამიანები, ვისაც მინიმუმ 50 ჯერ მაინც აქვთ შეყვანილი აპლიკაციაში მონაცემები."
    ]
   },
   {
@@ -281,14 +295,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ამ ამოცანაში ჩვენთვის ერთ-ერთი ყველაზე რთული ნაწილი არის განვსაზღვროთ ის ქულა, რომელიც მომხმარებელს ეკუთნის. ასეთი რაღაცის დასადგენად საჭიროა ნუტრიოტებში კარგად გარკვეული ჯგუფის მუშაობა და დადგენა შესაბამისი ფორმულისა და კოეფიციენტების. ჩვენ არ გვინდოდა ეს ფორმულა ჰაერიდან მოგვეტანა და ისე ჩაგვეტარებინა კვლევა, ამიტომ გავაკეთეთ რაღაც research-ები, ვკითხეთ აზრი ამ საკითხში გამოცდილ ადამიანებს და რჩევად მივიღეთ, რომ ყველაზე მარტივი, რაც შეგვიძლია გავაკეთოთ არის ის, რომ დავაკვირდეთ და დიდი ყურადღება მივაქციოთ კალორიებსა და შაქარს, კონკრეტული კოეფიციენტებით. \n",
+    "მთლიანად ვეყრდნობით აპლიკაციის დასახულ გოლ-ს და ნებისმიერ უზუსტობაზე შესაბამის ზომას ვიღებთ. შაქარს ვანიჭებთ 0.3 კოეფიციენტს, ხოლო კალორიებს 0.7-ს. მათ შესაბამის აცდენებს კი ვასკალირებთ, ვამრავლებთ მოცემულ კოეფიციენტებზე, ვჯამავთ და ვაქცევთ [0,100] შუალედში. ეს იქნება ჩვენი საბოლოო ქულა მოცემული დღისათვის.\n",
+    "მაგრამ, ასევე არ გვინდოდა ერთი ჩავარდნის გამო მაგალითად ძალიან ქვევით ჩემოსულიყო ქულები და ძალიან დიდი გავლენა ექონია მომავლისათვის. ამიტომ ქულის დადგენაც გავხადეთ რეკურენტული beta კოეფიციენტი -> beta * currDay + (1 - beta) * prevDay. ამით იჭრება გამოტოვებული დღეების პრობლემაც. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(dates)\n",
-    "# print(person_dates)\n",
-    "beta = 0.8\n",
+    "beta = 0.2\n",
     "lst = []\n",
     "lst2 = []\n",
     "for i in person_dt.index:\n",
@@ -320,8 +341,17 @@
     "        if len(results) == 0:\n",
     "            results.append((1 - beta) * (100 - lst[lsts_index] - lst2[lsts_index]))\n",
     "        else:\n",
-    "            results.append(results[len(results) - 1] * beta + (1 - beta) * (100 - lst[lsts_index] - lst2[lsts_index]))\n",
+    "            results.append(results[len(results) - 1] * (1 - beta) + beta * (100 - lst[lsts_index] - lst2[lsts_index]))\n",
     "        lsts_index += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -367,6 +397,15 @@
    "outputs": [],
    "source": [
     "person_dt = pd.DataFrame({\"Function\" : results})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -425,6 +464,15 @@
    "metadata": {},
    "source": [
     "გავაკეთოთ ისევ დიკი ფულერის ტესტი. ძირითად შემთხვევებში, რამდენად გასაკვირიც არ უნდა იყოს, ეს ტესტი 0-თან ახლო მნიშნელობებს აჩვენებს, თუმცა სტაციონალურს არაფრით არ გავს წესით, რადგან საშუალოს და ვარიაციის მნიშნელობები მარტივი შესამჩნევია, რომ ცვალებადია საკმაოდ. ამიტომ წესით ეს მოდელი არ გამოდგება იმისთვის, რომ კარგი შედეგები მივიღოთ, თუმცა მაინც ვცადოთ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -648,6 +696,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 87,
    "metadata": {
     "scrolled": true
@@ -781,6 +838,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 92,
    "metadata": {
     "scrolled": true
@@ -824,7 +890,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "შედეგი საკმაოდ მიმზიდველად გამოიყურება. ეფექტურობა საკმაოდ გაუმჯობესებულია, თუმცა GRU რახან ნეირონული ქსელია, მაინც საკმაო დროის რესურსს საჭიროებს. ამ კონკრეტულ შემთხვევაში დასჭირდა 2 მილიწამი. ეს კონრეტული მონაცემები რაც ავიღეთ, მაქსიმალურთან საკმაოდ ახლოსაა, და თუ გავითვალისწინებთ იმას, რომ იუზერების რაოდენობა დაახლოებით ათიათასია, მაშინ შეგვიძლია ვთქვათ, რომ ყველა იუზერსითვის ცალკე მოდელის შექმნა და გაშვებბის პროცესი დაახლოებით 20 წამს წაიღებს. ეს არც თუ ისე ცუდი შედეგია, თუმცა გაუმჯობესებაც შეიძლება (რა თქმა უნდა სიზუსტის ხარჯზე) gru ლეიერის პარამეტრების რაოდენობის შემცირებით."
+    "შედეგი საკმაოდ მიმზიდველად გამოიყურება. ეფექტურობა საკმაოდ გაუმჯობესებულია, თუმცა GRU რახან ნეირონული ქსელია, მაინც საკმაო დროის რესურსს საჭიროებს. ამ კონკრეტულ შემთხვევაში დასჭირდა 2 მილიწამი. ეს კონრეტული მონაცემები რაც ავიღეთ, მაქსიმალურთან საკმაოდ ახლოსაა, და თუ გავითვალისწინებთ იმას, რომ იუზერების რაოდენობა დაახლოებით ათიათასია, მაშინ შეგვიძლია ვთქვათ, რომ ყველა იუზერსითვის ცალკე მოდელის შექმნა და გაშვებბის პროცესი დაახლოებით 20 წამს წაიღებს. ეს არც თუ ისე ცუდი შედეგია, თუმცა გაუმჯობესებაც შეიძლება (რა თქმა უნდა სიზუსტის ხარჯზე) gru ლეიერის პარამეტრების რაოდენობის შემცირებით.\n",
+    "-"
    ]
   },
   {
@@ -851,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
